--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
                 <p>Don't have an account? <a href="register.html">Register</a></p>
             </div>
         </form>
-  <script src="login.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
